welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:61: error: not found: value reculer
  reculer()
  ^PatternPicture:62: error: not found: value reculer
  reculer()
  ^